Fix squished input for select

--- a/src/shared/components/select.css
+++ b/src/shared/components/select.css
@@ -72,7 +72,7 @@
 	}
 
 	.c-select__input_description {
-		@apply pointer-events-none;
+		@apply min-h-input-md pointer-events-none;
 	}
 
 	.c-select__container:has(:popover-open, :focus) .c-select__input {
